--- a/styles/media.css
+++ b/styles/media.css
@@ -1,20 +1,20 @@
-/* line 1, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/media.scss */
+/* line 1, D:/work/dat/conduit/sass/media.scss */
 .ico-text-1 {
   display: inline;
 }
 
-/* line 4, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/media.scss */
+/* line 4, D:/work/dat/conduit/sass/media.scss */
 .ico-text-2 {
   display: inline;
 }
 
-/* line 7, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/media.scss */
+/* line 7, D:/work/dat/conduit/sass/media.scss */
 .ico-text-3 {
   display: inline;
 }
 
 @media screen and (max-width: 1200px) {
-  /* line 13, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/media.scss */
+  /* line 13, D:/work/dat/conduit/sass/media.scss */
   .ico-text-1 {
     display: none;
     visibility: hidden;
@@ -22,7 +22,7 @@
 }
 
 @media screen and (max-width: 1100px) {
-  /* line 21, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/media.scss */
+  /* line 21, D:/work/dat/conduit/sass/media.scss */
   .ico-text-2 {
     display: none;
     visibility: hidden;
@@ -30,42 +30,42 @@
 }
 
 @media screen and (max-width: 800px) {
-  /* line 29, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/media.scss */
+  /* line 29, D:/work/dat/conduit/sass/media.scss */
   .ico-text-3 {
     display: none;
     visibility: hidden;
   }
-  /* line 34, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/media.scss */
+  /* line 34, D:/work/dat/conduit/sass/media.scss */
   .panel-title {
     text-align: center;
   }
-  /* line 39, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/media.scss */
+  /* line 39, D:/work/dat/conduit/sass/media.scss */
   .toolbox .nya-bs-select {
     width: 42px;
   }
-  /* line 41, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/media.scss */
+  /* line 41, D:/work/dat/conduit/sass/media.scss */
   .toolbox .nya-bs-select .dropdown-toggle {
     height: 36px;
   }
-  /* line 44, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/media.scss */
+  /* line 44, D:/work/dat/conduit/sass/media.scss */
   .toolbox .nya-bs-select .caret {
     display: none;
     visibility: hidden;
   }
-  /* line 51, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/media.scss */
+  /* line 51, D:/work/dat/conduit/sass/media.scss */
   .nya-bs-select {
     text-align: center;
   }
-  /* line 53, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/media.scss */
+  /* line 53, D:/work/dat/conduit/sass/media.scss */
   .nya-bs-select .dropdown-toggle {
     padding-right: 0px;
   }
-  /* line 56, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/media.scss */
+  /* line 56, D:/work/dat/conduit/sass/media.scss */
   .nya-bs-select .special-title, .nya-bs-select .filter-option {
     display: none;
     visibility: hidden;
   }
-  /* line 62, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/media.scss */
+  /* line 62, D:/work/dat/conduit/sass/media.scss */
   .special-title:before, .filter-option:before {
     visibility: visible;
     display: inline;
