--- a/sass/links.scss
+++ b/sass/links.scss
@@ -4,12 +4,12 @@
 
 a:link {
 	text-decoration: none;
-	color: $colorSecondary;
+	color: $colorAccent;
 }
 		
 a:hover {
 	text-decoration: underline;
-	color: darken($colorSecondary, 10%);
+	color: darken($colorAccent, 10%);
 }
 		
 a:active {
