--- a/sass/stream.scss
+++ b/sass/stream.scss
@@ -4,27 +4,82 @@
 	width: 100%;
 	position: absolute;
 	bottom: 0px;
-	right: 0;
-	left: 0;
-	top: 0;
+	right: 0px;
+	left: 0px;
+	top: 12px;
+	margin-top: 0px;
+	padding: 0 8px 100px 10px;
 	height: auto;
 	max-height: inherit;
-	overflow-y: auto;
+	overflow-y: scroll;
 	overflow-x: hidden;
 	display: inline-block;
-	border-radius: 4px;
-	border: 1px solid $colorGrey;
-	background: $colorBackground;
+	background: transparent;
+
+	.card:last-child {
+    border-radius: 0 0 2px 2px;
+}
+	
 }
 
+#article-stream {
+	top: 0px;
+}
+
+
+
 /*Buttons at bottom of a stream*/
+
+	.btn-group>.btn:first-child:not(:last-child):not(.dropdown-toggle) {
+		border-top-right-radius: 0 !important;
+		border-bottom-right-radius: 0 !important;
+		border-bottom-left-radius: 0 !important;
+	}
+	.btn-group>.btn:last-child:not(:first-child), .btn-group>.dropdown-toggle:not(:first-child) {
+		border-top-left-radius: 0 !important;
+		border-bottom-right-radius: 0 !important;
+		border-bottom-left-radius: 0 !important;
+	}
+
 .stream-action {
 	width: 100%;
 	position: absolute;
-	height: 50px;
+	height: 72px;
+	top: 10px;
 	left: 10px;
-	bottom: 10px;
 	right: 10px;
+
+	border: none;
+	border-radius: 2px 2px 0 0;
+	box-shadow: 0 0px 8px 0 rgba(0,0,0,0.12), 0 8px 8px 0 rgba(0,0,0,0.24);
+	background-color: $colorPrimary;
+
+	.btn-primary {
+		border: none;
+		border-bottom: 2px solid $colorPrimary;
+		color: rgba($colorPrimaryContrast, .7);
+		border-radius: none;
+		box-shadow: none;
+	}
+
+	.btn-primary:active,
+	.btn-primary.active {
+		color: $colorPrimaryContrast;
+	}
+
+	.btn-primary:active,
+	.btn-primary.active,
+	.btn-primary:focus,
+	.btn-primary.focus,
+	.btn-primary:hover,
+	.btn-primary:active:focus,
+	.btn-primary.active:focus,
+	.btn-primary:active:hover,
+	.btn-primary.active:hover {
+		background-color: $colorPrimary;
+		border-bottom: 2px solid $colorAccent;
+		box-shadow: none;
+	}
 }
 
 .stream-action .btn {
@@ -34,12 +89,12 @@
 
 /*Feed*/
     .fluid-container {
-        width: 25vw;
+        width: auto;
         position: absolute;
-        top: 10px;
-        bottom: 104px;
-        left: 10px;
-        right: 10px;
+        top: 82px;
+        bottom: 0px;
+        left: 0px;
+        right: -20px;
         padding: 0;
         max-height: inherit;
         overflow-y: auto;
@@ -47,30 +102,13 @@
         display: inline-block;
     }
 
-    /*Allows for clean connection to stream footer*/
-	#left .stream {
-		border-radius: 4px 4px 0 0;
-		border-bottom: none;
-	}
-
-	#stream-footer {
-		position: absolute;
-		bottom: 70px;
-		right: -10px;
-		left: 10px;
-		background-color: darken($colorBackground, 5%);
-		padding: 5px 0 0 10px;
-		border-radius: 0 0 4px 4px;
-		border: 1px solid $colorGrey;
-		height: 35px;
-	}
-
 /*Book*/
     .book {
-		width: 20vw;
+		width: auto;
 		top: 55px;
-		bottom: 70px;
-		left: -10px;			
+		bottom: 0px;
+		left: -10px;
+		right: 0px;
 		float: right;
 	}
 
