--- a/sass/viewer.scss
+++ b/sass/viewer.scss
@@ -13,9 +13,11 @@
 	overflow-y: auto;
 	overflow-x: hidden;
 	padding: 0 15px 0 15px;
-	border-radius: 4px;
-	border: 1px solid $colorGrey;
-	background: $colorBackground;
+
+	border-radius: 2px;
+	/*border: 1px solid $colorGrey;*/
+	background: $colorCardBackground;
+	box-shadow: 0 0px 2px rgba(0,0,0,0.12), 0 2px 2px 0 rgba(0,0,0,0.24);
 }
 
 .btn-edit  {
@@ -28,45 +30,46 @@
 .btn-edit:hover {
 	background-color: lighten($colorGrey, 8%);
 }
-.article-view .edit-field {
-	padding: 0 1vw;
-	width: 50vw;
-}
-
-.article-view #title-wrapper .edit-field {
-	line-height: 1.25em;
-	height: 6em;
-}
 
 .article-view .text.edit-field {
 	padding: 0 1vw;
 	height: 50vh;
 }
 
-
 .article-view #title-wrapper {
 	position: relative;
-	padding: 1.6em 0 0 0;
+	padding: 0;
 }
 
 
 .article-view .title {
 	padding: 0;
-	font-size: 2.15em;
+	font-size: 1.5em;
 	font-family: 'Montserrat', sans-serif;	
 }
 
+.article-view #title-wrapper .edit-field {
+	line-height: 1.813em;
+	height: 6em;
+}
 
 .article-view #image-wrapper {
 	display: inline-block;
-	padding: 2vh 0px 3vh 0px;
-	max-width: 100%;
-	max-height: 75vh;
+	padding: 0;
+	width: 100%;
+	max-height: 50vh;
 	display: block;
-	margin: 0px 0px 0px 0px;
+	margin: 14px 0 0 0;
 	justify-content: center;
 	text-align: center;
 	clear: both;
+
+	#nav-right {
+		float: right;
+	}
+	#nav-left {
+		float: left;
+	}
 }
 		
     .article-view #image-wrapper::before {
@@ -77,13 +80,14 @@
         margin-right: -0.25em;
     }
 		
-.article-view #image-wrapper .nav-arrow{
+.article-view #image-wrapper.nav-arrow{
 	display: inline-block;
 	vertical-align: middle;
 	max-width: 10%;
 	font-size: 5vw;
 	height: auto;
 	color: $colorFont;
+	z-index: 100;
 }
 	.article-view #image-wrapper .nav-arrow:hover{
 		cursor: pointer;
@@ -96,33 +100,35 @@
 		
 .article-view .article-image {
 	display: inline-block;
-	max-width: 75%;
 	margin: auto;
 	justify-content: center;
 	text-align: center;
 }
 		
 .article-view .article-image .image{
-	max-width: 100%;
-	max-height: 75vh;
+	width: 100%;
+	max-height: 50vh;
 	vertical-align: middle;
 }
 		
-
 .article-view .text-wrapper {
     display: inline-block;
 	width: 100%;
 }
 
 .article-view .text {
-	padding: 1.5vh 0 75px 0;
+	padding: 30px 3em;
 	display: block;
-	font-size: 1.15em;
-	line-height: 1.75em;
+	font-size: 1.125em;
+	line-height: 1.125em;
 	clear: both;
 	white-space: pre-line;
 }
 
+.article-view .edit-field {
+	padding: 0 1vw;
+	width: 50vw;
+}
    
 .article-view  .editable-buttons {
 	float: right;
