--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,20 +1,20 @@
 /*Layout*/
 /*Light*/
 /*Dark*/
-/* line 11, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/layout.scss */
+/* line 11, D:/work/dat/conduit/sass/layout.scss */
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-/* line 17, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/layout.scss */
+/* line 17, D:/work/dat/conduit/sass/layout.scss */
 html {
   font-size: 100% !important;
   font-family: 'SourceSansPro', sans-serif !important;
 }
 
-/* line 22, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/layout.scss */
+/* line 22, D:/work/dat/conduit/sass/layout.scss */
 body {
   min-width: 750px;
   /* 2x (LC fullwidth +
@@ -29,10 +29,10 @@ body {
   height: 100vh;
   font-size: 100%;
   font-family: 'SourceSansPro', sans-serif;
-  background-color: #fafafa;
+  background-color: #f2f2f2;
 }
 
-/* line 40, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/layout.scss */
+/* line 40, D:/work/dat/conduit/sass/layout.scss */
 #container {
   position: fixed;
   padding-left: 25vw;
@@ -41,11 +41,11 @@ body {
   /* RC fullwidth + CC padding */
   height: auto;
   bottom: 0px;
-  top: 50px;
+  top: 48px;
   background: transparent;
 }
 
-/* line 50, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/layout.scss */
+/* line 50, D:/work/dat/conduit/sass/layout.scss */
 #container .column {
   position: relative;
   float: left;
@@ -53,16 +53,16 @@ body {
   background: inherit;
 }
 
-/* line 57, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/layout.scss */
+/* line 57, D:/work/dat/conduit/sass/layout.scss */
 #center {
   padding: 0;
   /* CC padding */
   width: 55vw;
-  background: #fff;
+  background: #f2f2f2;
   float: left;
 }
 
-/* line 64, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/layout.scss */
+/* line 64, D:/work/dat/conduit/sass/layout.scss */
 #left {
   width: 25vw;
   /* LC width */
@@ -72,11 +72,11 @@ body {
   /* LC fullwidth + CC padding */
   margin-left: -100%;
   max-height: 100%;
-  background: #fff;
+  background: #f2f2f2;
   display: inline-block;
 }
 
-/* line 75, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/layout.scss */
+/* line 75, D:/work/dat/conduit/sass/layout.scss */
 #right {
   width: 20vw;
   /* RC width */
@@ -84,28 +84,30 @@ body {
   /* RC padding */
   margin-right: -20vw;
   /* RC fullwidth + CC padding */
-  background: #fff;
+  background: #f2f2f2;
   float: left;
   margin-left: 0px;
   max-height: 100%;
+  overflow-x: visible;
 }
 
-/* line 85, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/layout.scss */
+/* line 86, D:/work/dat/conduit/sass/layout.scss */
 #header {
   /*DISPLAY*/
   float: left;
   width: 100%;
-  height: 50px;
+  height: 48px;
   padding: 5px;
   /*COLORS*/
-  background: #004d99;
+  background: #009688;
   color: #fff;
   /*FONTS*/
   font-size: 1.5em;
   font-family: 'Montserrat', sans-serif;
+  box-shadow: 0 0px 8px 0 rgba(0, 0, 0, 0.12), 0 8px 8px 0 rgba(0, 0, 0, 0.24);
 }
 
-/* line 101, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/layout.scss */
+/* line 104, D:/work/dat/conduit/sass/layout.scss */
 #header-content-wrapper:before {
   content: '';
   display: inline-block;
@@ -114,7 +116,7 @@ body {
   margin-right: -0.25em;
 }
 
-/* line 109, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/layout.scss */
+/* line 112, D:/work/dat/conduit/sass/layout.scss */
 #header-content-wrapper {
   display: inline-block;
   vertical-align: middle;
@@ -123,14 +125,14 @@ body {
   text-align: center;
 }
 
-/* line 117, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/layout.scss */
+/* line 120, D:/work/dat/conduit/sass/layout.scss */
 #header-content {
   display: inline-block;
   vertical-align: middle;
 }
 
 /*** IE Fix ***/
-/* line 123, C:/Users/NGA_XFO/Documents/digital-attack-team/conduit/sass/layout.scss */
+/* line 126, D:/work/dat/conduit/sass/layout.scss */
 * html #left {
   left: 390px;
   /* RC fullwidth */
